--- a/src/main/resources/application-db2.properties
+++ b/src/main/resources/application-db2.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:db2://localhost:50000/demo
-#spring.datasource.url=jdbc:db2://localhost:50000/demo:timerLevelForQueryTimeOut=1;interruptProcessingMode=2;queryTimeout=5;
+#spring.datasource.url=jdbc:db2://localhost:50000/demo:queryTimeoutInterruptProcessingMode=2;
 spring.datasource.username=db2inst1
 spring.datasource.password=db2-inst1-pwd
 spring.datasource.driver-class-name=com.ibm.db2.jcc.DB2Driver
